--- a/QAService/package.json
+++ b/QAService/package.json
@@ -4,7 +4,8 @@
   "description": "SDC Team Java Questions & Answers Service",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "node index.js",
+    "parser": "node csvParser.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/miklbarton/sdc/issues"
   },
-  "homepage": "https://github.com/miklbarton/sdc#readme"
+  "homepage": "https://github.com/miklbarton/sdc#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^8.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  }
 }
