--- a/QAService/Dockerfile
+++ b/QAService/Dockerfile
@@ -3,8 +3,8 @@ WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
 RUN npm ci
 COPY . .
-RUN chown -R node:node /app
-USER node
+# RUN chown -R node:node /app
+# USER node
 EXPOSE 3000
 CMD ["npm", "start"]
 
