--- a/ReviewsService/package.json
+++ b/ReviewsService/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "./server/index.js",
   "scripts": {
+    "start": "node server/index.js",
     "test": "npm test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "pg": "^8.5.1"
   }
 }
