--- a/QAService/package.json
+++ b/QAService/package.json
@@ -25,6 +25,7 @@
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "artillery": "^1.6.2",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
