--- a/QAService/docker-compose.yaml
+++ b/QAService/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.8"
 services:
   app:
     build: .
@@ -25,4 +25,6 @@ services:
       POSTGRES_DB: db
     volumes:
       - ./db/db-scripts:/docker-entrypoint-initdb.d
-      - ./postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
+volumes:
+  postgres-data:
