--- a/QAService/docker-compose.yaml
+++ b/QAService/docker-compose.yaml
@@ -1,30 +1,42 @@
 version: "3.8"
 services:
   app:
-    build: .
+    image: miklbarton/qaservice_app:deploy
+    # build: .
     depends_on:
       - postgres
-    environment:
-      DATABASE_URL: postgres://user:pass@postgres:5432/db
-      NODE_ENV: development
-      PORT: 3000
     ports:
-      - "3000:3000"
-    command: npm run dev
-    volumes:
-      - .:/app/
-      - /app/node_modules
+      - 80:80
+    # networks:
+    #   - qaservice-network
+    # environment:
+    #   DATABASE_URL: postgres://user:pass@postgres:5432/db
+    #   NODE_ENV: production
+    #   PORT: 80
+    # ports:
+    #   - "80:80"
+    # command: npm start
+    # volumes:
+    #   # - .:/app/
+      # - /app/node_modules
 
   postgres:
-    image: postgres:latest
-    ports:
-      - "35432:5432"
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
-      POSTGRES_DB: db
+    image: miklbarton/postgres:deploy
+    # restart: unless-stopped
+    # ports:
+    #   - "5432:5432"
+    # environment:
+    #   POSTGRES_USER: user
+    #   POSTGRES_PASSWORD: pass
+    #   POSTGRES_DB: db
+    # networks:
+    # - qaservice-network
     volumes:
-      - ./db/db-scripts:/docker-entrypoint-initdb.d
+      # - ./db/db-scripts:/docker-entrypoint-initdb.d
       - postgres-data:/var/lib/postgresql/data
+# networks:
+#   qaservice-network:
+    # driver: bridge
 volumes:
   postgres-data:
+    # driver: local
