--- a/ReviewsService/package.json
+++ b/ReviewsService/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "artillery": "^1.6.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
